# discogs-wanted-scanner

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.txt  cookies.json.example  core.py  discogs_api.py  evaluator.py  extract_cookies.py  marketplace.py  models.py  notifier.py  preview_email.py  pyproject.toml  shipping_policy.py  shop_api.py  sold_prices.py  store.py  watcher.py
docs/superpowers/specs/: 2026-06-10-seller-picks-discounts-design.md
ideas/: price-demand-intelligence.md  threshold-backtesting.md
tests/: conftest.py  test_clients.py  test_control_dataset.py  test_core.py  test_evaluator.py  test_live_market.py  test_marketplace.py  test_notifier.py  test_notifier_live.py  test_shipping_policy.py  test_shop_api.py  test_sold_prices.py  test_store.py  test_watcher_helpers.py
tests/fixtures/: control_dataset.py  marketplace_release.html  sold_history.html
