[project]
name = "discogs-wanted-scanner"
version = "0.2.0"
description = "Hourly cron that finds good deals from your personal Discogs wantlist marketplace"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    # curl_cffi mimics Chrome's TLS fingerprint so Cloudflare's bot detection
    # doesn't 403 us. Plain `requests` ClientHellos vary across Python/OpenSSL
    # versions; Cloudflare bins identical cookies arriving from different
    # fingerprints as suspicious. Required for hosts whose stock Python ssl
    # produces an unrecognised JA3 (e.g. Debian 12's Python 3.11 + OpenSSL 3.0).
    "curl_cffi>=0.7",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]
